solved lazyload jumping issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,3 +47,31 @@ body,
 main {
     min-height: calc(100vh - 54px);
 }
+
+/* fix content jumping issue with lazySizes */
+.ratio-container {
+    position: relative;
+}
+.ratio-container:after {
+    content: '';
+    display: block;
+    height: 0;
+    width: 100%;
+    padding-bottom: calc(202/360 * 100%);
+    content: "";
+}
+.ratio-container > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* unknown ration variation */
+.unknown-ratio-container > img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+}
